--- a/etc/doc/tutorial/nl/02.2-Synth-Params.md
+++ b/etc/doc/tutorial/nl/02.2-Synth-Params.md
@@ -2,15 +2,15 @@
 
 # Synth Parameters: Amp en Pan
 
-Naast het bepalen van welke noot gespeeld of welke sample getriggerd moet worden, biedt Sonic Pi een hele reeks van parameters om geluiden te maken en bewerken. We zullen veel hiervan in deze tutorial behandelen en er is een uitgebreide documantatie in het help systeem te vinden. Maar in eerste instantie introduceren we twee van de meest nuttige: *amplitude*  en *pan*.
+Naast het aangeven welke muzieknoot gespeeld of sample getriggerd moet worden, biedt Sonic Pi een hele reeks van parameters om geluiden te maken en bewerken. We zullen er veel in deze tutorial behandelen, maar er is ook uitgebreide documantatie in het help systeem te vinden. We introduceren nu eerst twee van de meest nuttige: *amplitude*  en *pan*.
 
 ## Parameters
 
-Sonic Pi ondersteunt het begrip parameters voor zijn synths. Parameters zijn regelaars die je aan `play` doorgeeft en die aspecten van het geluid dat je hoort veranderen en regelen. Elke synth heeft zijn eigen parameters om zijn geluid te fine-tunen. Maak er zijn ook algemene parameters die door meerdere geluiden gebruikt worden, zoals `amp:` en omhullende parameters (die in een ander hoofdstuk behandeld worden).
+Sonic Pi gebruikt parameters bij synths. Met parameters verander en regel je aspecten van het geluid dat je hoort door een `play` aanroep. Elke synth heeft zijn eigen parameters om zijn geluid te fine-tunen. Maak er zijn ook algemene parameters die door meerdere geluiden gebruikt worden, zoals `amp:` en omhullende parameters (die in een ander hoofdstuk behandeld worden).
 
-Een parameter bestaat uit twee onderdelen: een naam (de naam van de regelaar) en een waarde (de waarde die je de regelaar wil geven). Je zou bijvoorbeeld een parameter genaamd `kaas:` kunnen hebben en deze de waarde `1` willen geven.
+Een parameter bestaat uit twee onderdelen: een naam en een waarde. Je zou bijvoorbeeld een parameter genaamd `kaas:` kunnen hebben die de waarde `1` heeft.
 
-Parameters worden doorgegeven aan aanroepen van `play` door een komma `,` te gebruiken, dan de naam van de parameter zoals `amp:` (vergeet de dubbele punt `:` niet) en vervolgens een spatie en de waarde van de parameter. Bijvoorbeeld:
+Parameters worden doorgegeven aan aanroepen van `play` door eerst een komma `,` te typen, dan de naam van de parameter zoals `amp:` (vergeet de dubbele punt `:` niet) en vervolgens een spatie en de waarde van de parameter. Bijvoorbeeld:
 
 ```
 play 50, kaas: 1
@@ -38,11 +38,11 @@ Als je per ongeluk dezelfde parameter twee keer gebruikt met verschillende waard
 play 50, worst: 0.5, kaas: 3, ei: 0.1, worst: 2
 ```
 
-Er zijn in Sonic Pi veel dingen die parameters gebruiken, besteed dus genoeg tijd aan het leren gebruiken ervan en dan komt het wel goed! Laten we eens met onze eerste parameter `amp:` gaan spelen.
+Er zijn in Sonic Pi veel onderdelen die parameters gebruiken. Besteed dus genoeg tijd aan het leren gebruiken ervan en dan komt het wel goed! Laten we eens met onze eerste parameter `amp:` gaan spelen.
 
 ## Amplitude
 
-Met amplitude geeft een computer aan hoe luid geluid klinkt, het volume dus. Een *hoge amplitude produceert een luid geluid* en een *lage amplitude produceert een zacht geluid*. Net zoals Sonic Pi getallen gebruikt om tijd en noten weer te geven, zo wordt amplitude ook in een getal uitgedrukt. Een amplitude van 0 is volledige stilte (je hoort niets), terwijl een amplitude van 1 het normale volume is. Je kunt het volume zelfs omhoog draaien tot 2, 10, 100. Maar je moet je wel bedenken dat wanneer het totale volume van alle geluiden te hoog wordt, Sonic Pi een zogenaamde compressor gebruikt alles wat samen te persen, zodat het niet te hard in je oren klinkt. Dit kan ervoor zorgen dat het geluid vreemd klinkt. Probeer dus vooral lage amplitudes te gebruiken om compressie te voorkomen, dat wil zeggen tussen 0 en 0.5
+Met amplitude geeft een computer aan hoe luid geluid klinkt, het volume dus. Een *hoge amplitude produceert een luid geluid* en een *lage amplitude produceert een zacht geluid*. Net zoals Sonic Pi getallen gebruikt om tijd en noten weer te geven, zo wordt amplitude ook in een getal uitgedrukt. Een amplitude van 0 is volledige stilte (je hoort niets), terwijl een amplitude van 1 het normale volume is. Je kunt het volume zelfs omhoog draaien tot 2, 10, 100. Maar bedenken dat wanneer het totale volume van alle geluiden te hoog wordt, Sonic Pi een zogenaamde compressor gebruikt alles wat samen te persen, zodat het niet te hard in je oren klinkt. Dit kan ervoor zorgen dat het geluid vreemd klinkt. Probeer dus vooral lage amplitudes (tussen 0 en 0.5) te gebruiken om compressie te voorkomen.
 
 ## Amp it up
 
@@ -58,7 +58,7 @@ Om op een dubbele amplitude te spelen gebruik je 2:
 play 60, amp: 2
 ```
 
-De `amp:` parameten verandert de allen de `play` aanroep waar deze bij staat. In het volgende voorbeeld is de eerste play aanroep dus op de helft van het volume en de tweede weer terug op het oorspronkelijke volume (1):
+De `amp:` parameter verandert de allen de `play` aanroep waar deze bij staat. In het volgende voorbeeld is de eerste play aanroep dus op de helft van het volume en de tweede weer terug op het oorspronkelijke volume (1):
 
 ```
 play 60, amp: 0.5
@@ -80,7 +80,7 @@ play 62, amp: 1
 
 ## Panning
 
-Een andere leuke parameter die je kunt gebruiken is `pan:`, waarmee je de panning van het geluid in stereo kunt besturen. Een geluid naar links pannen betekent dat je het uit de linker luidspreker hoort, en naar rechts pannen betekent dat je het uit de rechter luidspreker hoort. We gebruiken -1 voor volledig links, 0 voor het midden en 1 voor volledig rechts in het stereo bereik. Natuurlijk kun je elke willekeurige waarde tussen -1 en 1 gebruiken om de exacte positie van het geluid te regelen.
+Een andere leuke parameter die je kunt gebruiken is `pan:`. Hiermee regel je de panning van het geluid in stereo. Een geluid naar links pannen betekent dat je het uit de linker luidspreker hoort, en naar rechts pannen betekent dat je het uit de rechter luidspreker hoort. -1 betekent volledig links, 0 is het midden en 1 betekent volledig rechts in stereo. Natuurlijk kun je elke willekeurige waarde tussen -1 en 1 gebruiken om de exacte positie van het geluid te bepalen.
 
 Laten we eens een signaal uit de linker luidspreker afspelen:
 
