--- a/etc/doc/tutorial/nl/02.1-Your-First-Beeps.md
+++ b/etc/doc/tutorial/nl/02.1-Your-First-Beeps.md
@@ -1,6 +1,6 @@
-2.1 Je eerste bliepjes
+2.1 Je eerste geluid
 
-# Je eerste bliepjes
+# Je eerste geluid
 
 Bekijk de volgende code:
 
@@ -27,9 +27,9 @@ play 60
 
 ```
 
-Kleinere getallen zorgen dus voor lagere tonen en grotere getallen voor hogere tonen. Net als een piano; daar zorgen de toetsen aan de linker kant voor lagere geluiden en toetsen aan de rechter kant voor hogere geluiden. Het is zelf zo dat de getallen de noten op een piano voorstellen. `play 47` betekent namelijk: speel de 47e noot op de piano. En `play 48` is dan een noot hoger (de volgende rechts). Het is toevallig zo dat nummer 60 de C in de 4e octaaf is.
+Kleinere getallen zorgen dus voor lagere tonen en grotere getallen voor hogere tonen. Net als een piano; daar zorgen de toetsen aan de linker kant voor lagere geluiden en toetsen aan de rechter kant voor hogere geluiden. Het is zelf zo dat deze getallen de noten op een piano voorstellen. `play 47` betekent namelijk: speel de 47e noot op de piano. En `play 48` is dan een noot hoger (de volgende rechts). Er geldt dat nummer 60 de C in de 4e octaaf is.
 
-*Maak je geen zorgen* als je hier niets van begrijpt. Ik snapte het ook niet toen ik hier pas mee begon. Het enige wat nu belangrijk is, is dat je snapt dat *kleine getall voor lage tonen zorgen* en *grote getallen voor hoge tonen zorgen*.
+*Maak je geen zorgen* als je hier niets van begrijpt. Ik snapte het ook niet toen ik hier pas mee begon. Het enige wat nu belangrijk is, is dat je snapt dat *kleine getallen voor lage tonen zorgen* en *grote getallen voor hoge tonen zorgen*.
 
 ## Akkoorden
 
@@ -45,7 +45,7 @@ Jazzy! Als je dus meerdere `play`s achter elkaar zet, worden ze tegelijkertijd a
 
 ## Melodie
 
-Noten en akkoorden spelen is dus wel leuk, maar wat vind je van een melodie? Wat als je verschillende noten na elkaar wil spelen, in plaats van tegelijkertijd? Nou, dat is gemakkelijk, je hoeft alleen maar `sleep` tussen de noten te zetten:
+Noten en akkoorden spelen is dus wel leuk, maar wat dacht je van een melodie? Hoe speel je verschillende noten na elkaar, in plaats van tegelijkertijd? Nou, dat is gemakkelijk, je hoeft alleen maar `sleep` tussen de noten te zetten:
 
 
 ```
@@ -56,7 +56,7 @@ sleep 1
 play 79
 ```
 
-Prachtig, een fijne arpreggio. Wat zou de `1` in `sleep 1` betekenen? Het betekent *de duur van de pauze*. In feite betekent het een pauze van een tel, maar voorlopig kun je het zien als een pauze van 1 seconde. Hoe zouden we onze arpreggio dus iets sneller kunnen laten gaan? Daar hebben we dus kortere pauzes voor nodig. Wat dacht je bijvoorbeeld van een halve, oftewel `0.5`:
+Prachtig, een fijne arpreggio. Wat zou die `1` in `sleep 1` betekenen? Het betekent *de duur van de pauze*. In feite betekent het een pauze van een tel, maar voorlopig kun je het zien als een pauze van 1 seconde. Hoe zouden we onze arpreggio dus iets sneller kunnen laten gaan? Daar hebben we dus kortere pauzes voor nodig. Wat dacht je bijvoorbeeld van een halve, oftewel `0.5`:
 
 
 ```
@@ -69,12 +69,12 @@ play 79
 
 Als het goed is moet het je opvallen dat het nu sneller gaat. Probeer het nu zelf eens door de tijden te veranderen - gebruik verschillende pauzes en noten.
 
-Je moet ook eens proberen om tussenliggende noten zoals `play 52.3` en `play 52.63` te gebruiken. Er is geen enkele reden om je te beperken tot standaard hele noten. Amuseer je er maar eens mee.
+Gebruik ook eens tussenliggende tonen zoals `play 52.3` en `play 52.63`. Er is geen enkele reden om je te beperken tot standaard hele muzieknoten. Probeer maar!
 
 
 ## Traditionele notennamen
 
-Degenen die al iets van muzieknotatie af weten (maak je maar geen zorgen als dat niet het geval is - het is niet nodig om er plezier aan te beleven), kunnen ook een melodie maken door notennamen als C en F# te gebruiken, in plaats van getallen. Dat kan Sonic Pi namelijk ook. Je zou het volgende kunnen doen:
+Als je al iets van muzieknotatie af weet (maak je maar geen zorgen als dat niet het geval is - het is niet nodig om er plezier aan te beleven), kun je ook een melodie maken door notennamen als C en F# te gebruiken, in plaats van getallen. Dat kan Sonic Pi namelijk ook. Je zou het volgende kunnen doen:
 
 ```
 play :C
@@ -96,4 +96,4 @@ play :E4
 
 Wanneer je een kruis bij een noot wil zetten, voeg dan een `s` aan de naam van de noot toe, zoals `play :Fs3` en als je een mol bij een noot wil zetten, voeg er dan een `b` aan toe, zoals `play :Eb3`.
 
-*Ga nu helemaal uit je dak* met het maken van je eigen melodieën.
+*Ga nu helemaal uit je dak* met het maken van je eigen melodie.
